# kaila-companion

./: .gitignore  README.md  pyproject.toml
src/: app.py  blueprint.py  main.py
src/web/: about.html  books.html  characters.html  news.html  notes.html  storyteller.html
src/web/static/books/tome_of_kaila/: tome_of_kaila.html
src/web/static/styles/: main.css
